# learn_text_summarizer

./: LICENSE  README.md  pyproject.toml  requirements.txt  template.py
