[tool.poetry]
name = "learn-text-summarizer"
version = "0.1.0"
description = "A test project for experimentation with Hugging Face libraries"
authors = ["Srivatchan Rajasekaran <srivatchaniit@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
